--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "browser-sync start --server \"test\" --files \"test\""
+    "build": "webpack --config ./build/prod.js",
+    "start": "webpack-dev-server --config ./build/dev.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,12 @@
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.26.7",
-    "jest": "^24.9.0"
+    "filemanager-webpack-plugin": "^2.0.5",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   }
 }
