--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "author": "Pedro J. Martínez Martínez",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "filemanager-webpack-plugin": "^2.0.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
