tests moved to src/__tests__

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "name": "Jest Tests",
             "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
             "args": [
-                "${workspaceFolder}/test"
+                //"${workspaceFolder}/test"
             ],
             "internalConsoleOptions": "openOnSessionStart"
         },
