fixed debugger config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
             "name": "Jest Tests",
             "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
             "args": [
-                //"${workspaceFolder}/test"
+                "-i",
+                "${workspaceFolder}"
             ],
             "internalConsoleOptions": "openOnSessionStart"
         },
