--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest",
+    "test": "npm run build:dev && jest",
     "build": "webpack --config ./build/prod.js",
+    "build:dev": "webpack --config ./build/dev.js",
     "start": "webpack-dev-server --config ./build/dev.js"
   },
   "repository": {
@@ -28,10 +29,14 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "chromedriver": "^76.0.1",
+    "copy-webpack-plugin": "^5.0.4",
     "filemanager-webpack-plugin": "^2.0.5",
+    "geckodriver": "^1.16.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "selenium-webdriver": "^3.6.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
