--- a/package.json
+++ b/package.json
@@ -6,11 +6,22 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "browser-sync": "^2.26.7"
+    "autoprefixer": "^9.6.1",
+    "browser-sync": "^2.26.7",
+    "css-loader": "^3.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
   },
   "scripts": {
     "start": "browser-sync start --server '.' --files '.'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config ./build/prod.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +32,15 @@
   "bugs": {
     "url": "https://github.com/pmrt/webmarks/issues"
   },
-  "homepage": "https://github.com/pmrt/webmarks#readme"
+  "homepage": "https://github.com/pmrt/webmarks#readme",
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "last 2 version",
+    "not dead",
+    "iOS >= 9"
+  ]
 }
