--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^9.6.1",
-    "browser-sync": "^2.26.7",
     "css-loader": "^3.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -16,10 +15,11 @@
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   },
   "scripts": {
-    "start": "browser-sync start --server '.' --files '.'",
+    "start": "webpack-dev-server --config ./build/dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./build/prod.js"
   },
