--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^9.6.1",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
